Bug 374882 - Double clicks needed instead of single ones
Summary: Double clicks needed instead of single ones
Status: RESOLVED FIXED
Alias: None
Product: kphotoalbum
Classification: Applications
Component: Browser (other bugs)
Version First Reported In: 5.0.1
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: KPhotoAlbum Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-01-10 20:50 UTC by Martin Jost
Modified: 2019-01-05 22:08 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Jost 2017-01-10 20:50:11 UTC
In my system settings, I have configured KDE to use double clicks to
"open files and folders " (as the explanation says)
Now I have to also use double clicks e.g. to "enter" the different top
level items on the main screen. ("People", "Places", ...)
Even if I want to select an entry in "Settings/Birthdays", I need a
double click.
These turn to single clicks, if I change this KDE setting.
But because I want this "single click to just select", this is no good
option.
The behaviour had been single clicks, irrespective of the settings in
previous versions. (So I assume this is an effect of KDE4 <=> 5 and not a
conscious change in KPA itself)

I'm using openSUSE Leap 42.2 as OS (QT 5.6.1; KDE Plasma 5.8.3, KDE Framework 5.26.0)
Comment 1 Johannes Zarl-Zierl 2019-01-04 20:47:20 UTC
Sorry for not responding way sooner. Somehow I overlooked and/or forgot it…

I can confirm the issue, and it is not an intended change. Thanks for reporting!
Comment 2 Johannes Zarl-Zierl 2019-01-04 22:34:39 UTC
For future reference, the new behavior is caused by Plasma now enforcing a unified look and feel via use of QStyle.

I guess one *could* argue that browsing categories should work the same as browsing files. The Birthdays Page in the Settings dialog, however, is definitely behaving incorrectly.

See also: https://api.kde.org/frameworks/frameworkintegration/html/classKStyle.html
Comment 3 Johannes Zarl-Zierl 2019-01-05 22:08:03 UTC
Git commit dca2a7cab56d1632df33ae2dfeb5e078a2d1e853 by Johannes Zarl-Zierl.
Committed on 05/01/2019 at 21:59.
Pushed by johanneszarl into branch 'master'.

Fix item activation when workspace is set up for double-clicks.

When the workspace behavior is set to use double-clicks (as configured
using "kcmshell5 kcm_workspace"), then kphotoalbum would require
double-clicks for the following items:

1. Selecting an item in the BrowserPage (i.e. when browsing categories)
2. Selecting a person in the birthday settings page
3. Selecting a tag/category in the tag groups settings page

This has now been fixed to use single clicks for the items mentioned
above.

M  +2    -2    Browser/BrowserWidget.cpp
M  +1    -1    Settings/BirthdayPage.cpp
M  +1    -1    Settings/TagGroupsPage.cpp

https://commits.kde.org/kphotoalbum/dca2a7cab56d1632df33ae2dfeb5e078a2d1e853