Fix item activation when workspace is set up for double-clicks.

When the workspace behavior is set to use double-clicks (as configured
using "kcmshell5 kcm_workspace"), then kphotoalbum would require
double-clicks for the following items:

1. Selecting an item in the BrowserPage (i.e. when browsing categories)
2. Selecting a person in the birthday settings page
3. Selecting a tag/category in the tag groups settings page

This has now been fixed to use single clicks for the items mentioned
above.

BUG: 374882